...
    <string name="menu_about">About</string>
    <string name="menu_swap_transformer">Swap Transformer</string>

    <string name="hours_since_install">Days/re-installs since first install: %d</string>

    <string name="message_undo">Restored user names</string>
    <string name="message_valid">Email and password valid</string>
    <string name="message_transformer">Transformer: %s</string>

    <string name="preference_file_key">test_shared_prefs</string>

    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
...
